2004-02-26  ujwal

	* Fixed a couple of emulation problems with reverse video on 
	  OpenVMS systems in scrollDown and selectGraphicRendition.

2004-02-25  ujwal

	* Fixed display bug in scrollUp.
	* Change cursor when window becomes/resigns key.

2004-02-25  fabian

	* Changed all the html docs into shtml
	
2004-02-24  fabian

	* Fixed a double-width character handling bug in PTYTextView
	* Find Panel is now working. Limitation: doesn't search across lines.
	* Blink now only happens for key window.
	* Non-key or no-input windows now have a slower refresh rate.
	
2004-02-24  ujwal

	* Added back support for blinking cursor. Reduced blink frequency.
	* Added back support for "Focus follows mouse".
	* Added back support for cmd +/- to change font size on the fly.
	* Removed preference for "Enforce character alignment".
	* Made PreferencePanel a NSWindowController.

2004-02-23  ujwal

	* Added support for setting cursor color.
	* Changed bold behavior by redrawing character. 
	  Bold now works for all fonts.
	* Fixed config panel nibs.

2004-02-23  fabian

	* Fixed bug in [PTYTextView getCharImage].
	* Changed blinking behavior. No we no longer reverse fg/bg
	* Changed bold behavior. Bold now works for all fonts.
	
2004-02-22  ujwal

	* Making sure dirty flags are reset for a line after processing it.

2004-02-21  fabian

	* Fixed highlight color display
	* Now including color code in the hash function
	
2004-02-20  ujwal

	* Minor updates to selection stuff. Re-enabled "select all".
	* Added back print functionality. Removed "Print Selection". 
	  Handled by "Print".

2004-02-19  fabian

	* Now using srand() as hash function in hoping of less collision.
	* Fixed another cursor problem when dealing with double width characters.
	* Fixed a memory allocation bug that cause crashes.
	* Fixed some memory leaks in PTYTextView.
	
2004-02-19  ujwal

	* Forcing redraw when tabview is redrawn.
	* Fixed scrollbar problem.
	* Added back support for drag-drop into textview.